eks-gitops/applications/manifest/gateway/gi/gateway-external.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dmnd-gi-nprod-gateway-external
  namespace: default
spec:
  selector:
    istio: dmnd-gi-nprod-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - '*'
    port:
      name: https-443
      number: 443
      protocol: HTTP
