eks-gitops/applications/manifest/gateway/gi/gateway-internal.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dmnd-gi-nprod-gateway-internal
  namespace: default
spec:
  selector:
    istio: dmnd-gi-nprod-internal
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
